--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -91,10 +91,12 @@
     <style name="TextSecure.TitleTextStyle" parent="TextAppearance.AppCompat.Widget.ActionBar.Title">
         <item name="android:textColor">@color/white</item>
         <item name="android:textColorHint">#BFffffff</item>
+        <item name="android:textSize">18sp</item>
     </style>
 
     <style name="TextSecure.SubtitleTextStyle" parent="TextAppearance.AppCompat.Widget.ActionBar.Subtitle">
         <item name="android:textColor">#BFffffff</item>
+        <item name="android:textSize">13sp</item>
     </style>
 
     <style name="Registration.Description" parent="@android:style/TextAppearance">
