--- a/res/layout/camera_controls_landscape.xml
+++ b/res/layout/camera_controls_landscape.xml
@@ -35,6 +35,7 @@
         android:layout_width="36dp"
         android:layout_height="36dp"
         android:layout_marginBottom="42dp"
+        android:scaleType="centerCrop"
         app:layout_constraintBottom_toTopOf="@id/camera_capture_button"
         app:layout_constraintStart_toStartOf="@id/camera_capture_button"
         app:layout_constraintEnd_toEndOf="@id/camera_capture_button"
