--- a/res/layout/camera_contact_selection_fragment.xml
+++ b/res/layout/camera_contact_selection_fragment.xml
@@ -5,7 +5,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:animateLayoutChanges="true"
     android:background="?android:windowBackground">
 
     <androidx.appcompat.widget.Toolbar
@@ -13,10 +12,16 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="?attr/conversation_list_toolbar_background"
-        android:elevation="8dp"
         android:theme="?actionBarStyle"
         app:title="@string/CameraContacts_select_signal_recipients"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <View
+        android:id="@+id/camera_contacts_top_shadow"
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:background="@drawable/search_toolbar_shadow"
+        app:layout_constraintTop_toBottomOf="@id/camera_contacts_toolbar" />
 
     <LinearLayout
         android:id="@+id/camera_contacts_empty"
@@ -72,7 +77,7 @@
         app:layout_constraintTop_toBottomOf="@id/camera_contacts_toolbar" />
 
     <View
-        android:id="@+id/view"
+        android:id="@+id/camera_contacts_bottom_shadow"
         android:layout_width="match_parent"
         android:layout_height="2dp"
         android:background="@drawable/compose_divider_background"
@@ -118,6 +123,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:visibility="gone"
-        app:constraint_referenced_ids="camera_contacts_send_button,camera_contacts_selected_list,view" />
+        app:constraint_referenced_ids="camera_contacts_send_button,camera_contacts_selected_list,camera_contacts_bottom_shadow" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
