Update invite icon.

--- a/res/drawable/ic_invite_circle.xml
+++ b/res/drawable/ic_invite_circle.xml
@@ -2,13 +2,13 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="oval">
-            <solid android:color="#eeefef" />
+            <solid android:color="#70707C" />
         </shape>
     </item>
     <item
-        android:bottom="12dp"
-        android:drawable="@drawable/ic_invite_24dp"
-        android:left="12dp"
-        android:right="12dp"
-        android:top="12dp" />
+        android:bottom="10dp"
+        android:drawable="@drawable/ic_invite_28dp"
+        android:left="10dp"
+        android:right="10dp"
+        android:top="10dp" />
 </layer-list>
