--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -142,6 +142,16 @@
         <item name="android:lineSpacingMultiplier">1.25</item>
     </style>
 
+    <style name="ViewOnceVideo.Duration" parent="@android:style/TextAppearance">
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">@color/white</item>
+        <!-- TODO: change to transparent_black_60 after color swap -->
+        <item name="android:shadowColor">#99000000</item>
+        <item name="android:shadowDx">0</item>
+        <item name="android:shadowDy">0</item>
+        <item name="android:shadowRadius">2</item>
+    </style>
+
     <!-- For Holo Light Dialog Activity Styling Emulation -->
 
     <style name="Widget.ProgressBar.Horizontal" parent="@android:style/Widget.ProgressBar.Horizontal">
