--- a/res/layout/camerax_fragment.xml
+++ b/res/layout/camerax_fragment.xml
@@ -6,6 +6,7 @@
 
     <org.thoughtcrime.securesms.mediasend.camerax.CameraXView
         android:id="@+id/camerax_camera"
+        android:layout_gravity="center"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
