--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -340,4 +340,9 @@
         <item name="titleTextStyle">@style/TextSecure.TitleTextStyle.Conversation</item>
     </style>
 
+    <declare-styleable name="CameraButtonView">
+        <attr name="imageCaptureSize" format="dimension" />
+        <attr name="recordSize" format="dimension" />
+    </declare-styleable>
+
 </resources>
