--- a/res/layout/camera_controls_portrait.xml
+++ b/res/layout/camera_controls_portrait.xml
@@ -8,11 +8,12 @@
 
     <org.thoughtcrime.securesms.mediasend.CameraButtonView
         android:id="@+id/camera_capture_button"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
-        android:layout_marginBottom="24dp"
-        android:background="@drawable/ic_camera_shutter"
+        android:layout_width="96dp"
+        android:layout_height="96dp"
+        android:layout_marginBottom="25dp"
         android:contentDescription="@string/CameraXFragment_capture_description"
+        app:imageCaptureSize="60dp"
+        app:recordSize="42dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -41,7 +42,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         tools:visibility="visible" />
-    
+
     <com.makeramen.roundedimageview.RoundedImageView
         android:id="@+id/camera_gallery_button"
         android:layout_width="36dp"
