--- a/res/layout/enter_backup_passphrase_dialog.xml
+++ b/res/layout/enter_backup_passphrase_dialog.xml
@@ -1,20 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             android:layout_width="match_parent"
-             android:layout_height="wrap_content"
-             android:padding="16dp">
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:padding="16dp">
 
     <com.google.android.material.textfield.TextInputLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
         <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/restore_passphrase_input"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="@string/enter_backup_passphrase_dialog__backup_passphrase"
-                android:imeOptions="actionDone"
-                android:inputType="number" />
+            android:id="@+id/restore_passphrase_input"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="monospace"
+            android:hint="@string/enter_backup_passphrase_dialog__backup_passphrase"
+            android:imeOptions="actionDone"
+            android:inputType="number"
+            android:maxLength="30"
+            android:textSize="16sp" />
 
     </com.google.android.material.textfield.TextInputLayout>
+
 </FrameLayout>
