Apply proper tinting to conversation app bar.

--- a/res/layout/expiration_timer_menu.xml
+++ b/res/layout/expiration_timer_menu.xml
@@ -13,8 +13,7 @@
             android:layout_width="20dp"
             android:layout_height="20dp"
             android:layout_gravity="center"
-            app:srcCompat="@drawable/ic_timer_24"
-            android:tint="@color/transparent_white_80"
+            app:srcCompat="@drawable/ic_timer_conversation_24"
             android:scaleType="fitCenter"/>
 
     <TextView
@@ -25,6 +24,6 @@
             android:gravity="center_horizontal|bottom"
             android:paddingBottom="3dp"
             android:paddingTop="1dp"
-            android:textColor="@android:color/white"
+            android:textColor="?conversation_subtitle_color"
             android:textSize="10sp" />
 </FrameLayout>
