--- a/res/layout/mediasend_activity.xml
+++ b/res/layout/mediasend_activity.xml
@@ -121,15 +121,15 @@
 
                     <org.thoughtcrime.securesms.components.SendButton
                         android:id="@+id/mediasend_send_button"
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:paddingTop="6dp"
                         android:paddingEnd="6dp"
                         android:paddingBottom="6dp"
-                        android:paddingStart="11dp"
+                        android:paddingStart="6dp"
                         android:scaleType="fitCenter"
                         android:contentDescription="@string/conversation_activity__send"
-                        android:tint="@color/white"
+                        android:tint="@color/core_white"
                         app:srcCompat="?conversation_transport_sms_indicator"
                         android:background="@drawable/circle_touch_highlight_background" />
 
