Update preference divider colors

--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -283,6 +283,8 @@
 
 
     <style name="PreferenceThemeOverlay.Fix" parent="PreferenceThemeOverlay.v14.Material">
+        <item name="android:divider">@null</item>
+        <item name="android:dividerHeight">0dp</item>
     </style>
 
     <style name="Color1SwitchStyle">
