--- a/res/layout/share_activity.xml
+++ b/res/layout/share_activity.xml
@@ -60,6 +60,7 @@
                                                     android:layout_width="70dp"
                                                     android:layout_height="70dp"
                                                     android:layout_centerInParent="true"
+                                                    wheel:matProg_barColor="?title_text_color_primary"
                                                     wheel:matProg_progressIndeterminate="true" />
 
 </RelativeLayout>
