--- a/res/layout/contact_filter_toolbar.xml
+++ b/res/layout/contact_filter_toolbar.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<merge xmlns:android="http://schemas.android.com/apk/res/android">
+<merge xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <LinearLayout android:layout_width="match_parent"
                   android:layout_height="match_parent"
@@ -42,7 +43,7 @@
                            android:focusable="true"
                            android:tint="?contact_filter_toolbar_icon_tint"
                            android:background="?actionBarItemBackground"
-                           android:src="@drawable/ic_dialpad_white_24dp" />
+                           app:srcCompat="@drawable/ic_number_pad_conversation_filter_24" />
 
                 <ImageView android:id="@+id/search_keyboard"
                            android:contentDescription="@string/contact_filter_toolbar__show_keyboard_description"
@@ -55,7 +56,7 @@
                            android:focusable="true"
                            android:tint="?contact_filter_toolbar_icon_tint"
                            android:background="?actionBarItemBackground"
-                           android:src="@drawable/ic_keyboard_white_24dp" />
+                           app:srcCompat="?conversation_keyboard_toggle" />
 
                 <ImageView android:id="@+id/search_clear"
                            android:contentDescription="@string/contact_filter_toolbar__clear_entered_text_description"
@@ -65,10 +66,8 @@
                            android:gravity="center_vertical"
                            android:clickable="true"
                            android:visibility="gone"
-                           android:focusable="true"
-                           android:tint="?contact_filter_toolbar_icon_tint"
                            android:background="?actionBarItemBackground"
-                           android:src="@drawable/ic_clear_white_24dp" />
+                           app:srcCompat="@drawable/ic_x_conversation_filter_24" />
 
             </org.thoughtcrime.securesms.components.AnimatingToggle>
 
