--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -2,64 +2,70 @@
 <resources>
 
   <string-array name="language_entries">
-      <item>@string/preferences__default</item>
-      <item>English</item>
-      <item>Arabic العربية</item>
-      <item>Azərbaycan</item>
-      <item>Bulgarian български</item>
-      <item>Burmese ဗမာစကား</item>
-      <item>Català</item>
-      <item>Čeština</item>
-      <item>Chinese (Simplified) 中文 (简体)</item>
-      <item>Chinese (Traditional) 中文 (繁體)</item>
-      <item>Cymraeg</item>
-      <item>Dansk</item>
-      <item>Deutsch</item>
-      <item>Eesti</item>
-      <item>Español</item>
-      <item>Esperanto</item>
-      <item>Euskara</item>
-      <item>Français</item>
-      <item>Gaeilge</item>
-      <item>Galego</item>
-      <item>Greek ελληνικά</item>
-      <item>Hebrew עברית</item>
-      <item>Hindi हिंदी</item>    
-      <item>Hrvatski</item>
-      <item>Indonesia</item>
-      <item>Italiano</item>
-      <item>Japanese 日本語</item>
-      <item>Khmer ភាសាខ្មែរ</item>
-      <item>Kiswahili</item>
-      <item>Korean 한국어</item>
-      <item>Kurdí</item>
-      <item>Latviešu</item>
-      <item>Lietuvių</item>
-      <item>Luganda</item>
-      <item>Magyar</item>
-      <item>Macedonian македонски јазик</item>
-      <item>Nederlands</item>
-      <item>Norsk (bokmål)</item>
-      <item>Norsk (nynorsk)</item>
-      <item>Persian فارسی</item>
-      <item>Polski</item>
-      <item>Português</item>
-      <item>Português do Brasil</item>
-      <item>Punjabi ਪੰਜਾਬੀ / پنجابی</item>
-      <item>Quechua</item>    
-      <item>Română</item>
-      <item>Russian Pусский</item>
-      <item>Serbian српски</item>
-      <item>Shqip</item>
-      <item>Slovenščina</item>
-      <item>Slovenský</item>
-      <item>Suomi</item>
-      <item>Svenska</item>
-      <item>Telugu తెలుగు</item>
-      <item>Thai ภาษาไทย</item>
-      <item>Türkçe</item>
-      <item>Ukrainian Українська</item>
-      <item>Vietnamese Tiếng Việt</item>
+<!-- zz --><item>@string/preferences__default</item>
+<!-- en --><item>English</item>
+<!-- ar --><item>Arabic العربية</item>
+<!-- az --><item>Azərbaycan</item>
+<!-- bn --><item>Bengali বাংলা</item>
+<!-- bs --><item>Bosanski</item>
+<!-- bg --><item>Bulgarian български</item>
+<!-- my --><item>Burmese ဗမာစကား</item>
+<!-- ca --><item>Català</item>
+<!-- cs --><item>Čeština</item>
+<!-- zh_CN --><item>Chinese (Simplified) 中文 (简体)</item>
+<!-- zh_TW --><item>Chinese (Traditional) 中文 (繁體)</item>
+<!-- cy --><item>Cymraeg</item>
+<!-- da --><item>Dansk</item>
+<!-- de --><item>Deutsch</item>
+<!-- et --><item>Eesti</item>
+<!-- es --><item>Español</item>
+<!-- eo --><item>Esperanto</item>
+<!-- eu --><item>Euskara</item>
+<!-- fr --><item>Français</item>
+<!-- ga --><item>Gaeilge</item>
+<!-- gl --><item>Galego</item>
+<!-- el --><item>Greek ελληνικά</item>
+<!-- he/iw --><item>Hebrew עברית</item>
+<!-- hi --><item>Hindi हिंदी</item>
+<!-- hr --><item>Hrvatski</item>
+<!-- id/in --><item>Indonesia</item>
+<!-- it --><item>Italiano</item>
+<!-- ja --><item>Japanese 日本語</item>
+<!-- km --><item>Khmer ភាសាខ្មែរ</item>
+<!-- sw --><item>Kiswahili</item>
+<!-- ko --><item>Korean 한국어</item>
+<!-- ku --><item>Kurdí</item>
+<!-- lv --><item>Latviešu</item>
+<!-- lt --><item>Lietuvių</item>
+<!-- lg --><item>Luganda</item>
+<!-- mk --><item>Macedonian македонски јазик</item>
+<!-- hu --><item>Magyar</item>
+<!-- ms --><item>Malay (Bahasa Melayu)</item>
+<!-- mr --><item>Marathi मराठी</item>
+<!-- nl --><item>Nederlands</item>
+<!-- nb --><item>Norsk (bokmål)</item>
+<!-- nn --><item>Norsk (nynorsk)</item>
+<!-- fa --><item>Persian فارسی</item>
+<!-- pl --><item>Polski</item>
+<!-- pt --><item>Português</item>
+<!-- pt_BR --><item>Português do Brasil</item>
+<!-- pa --><item>Punjabi ਪੰਜਾਬੀ / پنجابی</item>
+<!-- qu_EC --><item>Quechua</item>
+<!-- ro --><item>Română</item>
+<!-- ru --><item>Russian Pусский</item>
+<!-- sr --><item>Serbian српски</item>
+<!-- sq --><item>Shqip</item>
+<!-- sl --><item>Slovenščina</item>
+<!-- sk --><item>Slovenský</item>
+<!-- fi --><item>Suomi</item>
+<!-- sv --><item>Svenska</item>
+<!-- ta --><item>Tamil தமிழ்</item>
+<!-- te --><item>Telugu తెలుగు</item>
+<!-- th --><item>Thai ภาษาไทย</item>
+<!-- tr --><item>Türkçe</item>
+<!-- uk --><item>Ukrainian Українська</item>
+<!-- ur --><item>Urdu اردو‎</item>
+<!-- vi --><item>Vietnamese Tiếng Việt</item>
   </string-array>
 
   <string-array name="language_values">
@@ -67,6 +73,8 @@
       <item>en</item>
       <item>ar</item>
       <item>az</item>
+      <item>bn</item>
+      <item>bs</item>
       <item>bg</item>
       <item>my</item>
       <item>ca</item>
@@ -97,8 +105,10 @@
       <item>lv</item>
       <item>lt</item>
       <item>lg</item>
-      <item>hu</item>
       <item>mk</item>
+      <item>hu</item>
+      <item>ms</item>
+      <item>mr</item>
       <item>nl</item>
       <item>nb</item>
       <item>nn</item>
@@ -116,10 +126,12 @@
       <item>sk</item>
       <item>fi</item>
       <item>sv</item>
+      <item>ta</item>
       <item>te</item>
       <item>th</item>
       <item>tr</item>
       <item>uk</item>
+      <item>ur</item>
       <item>vi</item>
   </string-array>
 
