--- a/res/values/attrs.xml
+++ b/res/values/attrs.xml
@@ -35,6 +35,13 @@
     <attr name="fab_color" format="reference|color" />
     <attr name="lower_right_divet" format="reference" />
 
+    <attr name="insight_modal_background" format="reference" />
+    <attr name="insight_modal_button_background" format="color" />
+    <attr name="insight_title" format="color" />
+    <attr name="insight_body_2" format="color" />
+    <attr name="insight_dashboard_bottom_bar_background" format="color" />
+    <attr name="insight_progress_background" format="color" />
+
     <attr name="centered_app_title_color" format="reference|color" />
     <attr name="ic_arrow_forward" format="reference" />
     <attr name="ic_visibility" format="reference" />
