--- a/res/values/text_styles.xml
+++ b/res/values/text_styles.xml
@@ -45,4 +45,46 @@
         <item name="android:textColor">@color/core_white</item>
     </style>
 
+    <style name="TextAppearance.Signal.Headline.Insights" parent="">
+        <item name="android:textStyle">bold</item>
+        <item name="android:textSize">28sp</item>
+        <item name="android:textColor">?title_text_color_primary</item>
+    </style>
+
+    <style name="TextAppearance.Signal.SubHead.Insights" parent="">
+        <item name="android:textStyle">bold</item>
+        <item name="android:textSize">20sp</item>
+        <item name="android:textColor">?title_text_color_primary</item>
+    </style>
+
+    <style name="TextAppearance.Signal.Headline.Insights.Modal.Percent" parent="TextAppearance.Signal.Headline.Insights">
+        <item name="android:textSize">@dimen/insights_modal_percent_text_size</item>
+    </style>
+
+    <style name="TextAppearance.Signal.SubHead.Insights.Modal.Percent" parent="TextAppearance.Signal.SubHead.Insights">
+        <item name="android:textSize">@dimen/insights_modal_percent_sign_text_size</item>
+    </style>
+
+    <style name="TextAppearance.Signal.Title.Insights" parent="">
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">?insight_title</item>
+    </style>
+
+    <style name="TextAppearance.Signal.Body.Insights" parent="">
+        <item name="android:textColor">?title_text_color_secondary</item>
+        <item name="android:textSize">14sp</item>
+    </style>
+
+    <style name="TextAppearance.Signal.Body2.Insights" parent="">
+        <item name="android:textColor">?insight_body_2</item>
+        <item name="android:textSize">13sp</item>
+    </style>
+
+    <style name="TextAppearance.Signal.Caption.Insights" parent="">
+        <item name="android:textColor">@color/core_white</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:textAllCaps">true</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
 </resources>
