In dark mode, use a dark theme base for RegistrationLockDialog and RationaleDialog.
Fixes #8995
Closes #9077

--- a/res/values/themes.xml
+++ b/res/values/themes.xml
@@ -585,7 +585,11 @@
         <item name="shared_contact_item_button_color">@color/core_grey_85</item>
     </style>
     
-    <style name="RationaleDialog" parent="Theme.AppCompat.Light.Dialog.Alert">
+    <style name="RationaleDialogLight" parent="Theme.AppCompat.Light.Dialog.Alert">
+        <item name="android:windowBackground">@drawable/permission_rationale_dialog_corners</item>
+    </style>
+
+    <style name="RationaleDialogDark" parent="Theme.AppCompat.Dialog.Alert">
         <item name="android:windowBackground">@drawable/permission_rationale_dialog_corners</item>
     </style>
 
