Implement new Message Request UI.

--- a/res/values/attrs.xml
+++ b/res/values/attrs.xml
@@ -181,6 +181,10 @@
     <attr name="advanced_icon" format="reference" />
     <attr name="safety_number_icon" format="reference" />
 
+    <attr name="message_request_dialog_button_background" format="reference" />
+    <attr name="message_request_text_color_primary" format="color" />
+    <attr name="message_request_text_color_secondary" format="color" />
+
     <attr name="pref_icon_tint" format="color"/>
 
     <attr name="pref_divider" format="reference" />
