--- a/res/values/text_styles.xml
+++ b/res/values/text_styles.xml
@@ -87,4 +87,19 @@
         <item name="android:textStyle">bold</item>
     </style>
 
+    <style name="Signal.Text.MessageRequest.Title" parent="Base.TextAppearance.AppCompat.Title">
+        <item name="android:textSize">20sp</item>
+        <item name="android:textColor">?message_request_text_color_primary</item>
+    </style>
+
+    <style name="Signal.Text.MessageRequest.Subtitle" parent="Base.TextAppearance.AppCompat.Caption">
+        <item name="android:textSize">14sp</item>
+        <item name="android:textColor">?message_request_text_color_secondary</item>
+    </style>
+
+    <style name="Signal.Text.MessageRequest.Description" parent="Base.TextAppearance.AppCompat.Subhead">
+        <item name="android:textSize">14sp</item>
+        <item name="android:textColor">?message_request_text_color_secondary</item>
+    </style>
+
 </resources>
