--- a/res/layout/invite_activity.xml
+++ b/res/layout/invite_activity.xml
@@ -7,13 +7,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <androidx.appcompat.widget.Toolbar
-        style="@style/TextSecure.HighlightActionBar"
-        android:theme="@style/TextSecure.HighlightActionBar"
+        style="?actionBarStyle"
+        android:theme="?actionBarStyle"
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
-        app:titleTextAppearance="@style/TextSecure.TitleTextStyle.Conversation"
-        app:subtitleTextAppearance="@style/TextSecure.SubtitleTextStyle.Conversation"
+        app:titleTextAppearance="@style/TextSecure.TitleTextStyle"
+        app:subtitleTextAppearance="@style/TextSecure.SubtitleTextStyle"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -29,25 +29,18 @@
                       android:layout_height="wrap_content"
                       android:layout_width="match_parent"
                       android:orientation="vertical"
-                      android:padding="10dp"
-                      android:background="?attr/invite_background">
-
-            <ImageView android:id="@+id/heart"
-                       android:layout_width="wrap_content"
-                       android:layout_height="wrap_content"
-                       android:layout_gravity="center_horizontal"
-                       android:contentDescription="@string/InviteActivity_heart_content_description"
-                       android:src="@drawable/love_heart" />
+                      android:paddingTop="14dp"
+                      android:paddingStart="28dp"
+                      android:paddingEnd="28dp">
 
             <TextView android:layout_width="match_parent"
                       android:layout_height="wrap_content"
-                      android:textColor="@color/white"
-                      android:textSize="20sp"
+                      android:textAppearance="@style/TextAppearance.Signal.Title2"
                       android:text="@string/InviteActivity_friends_dont_let_friends_text_unencrypted"
+                      android:textColor="?title_text_color_primary"
                       android:gravity="center_horizontal"
                       android:layout_marginBottom="30dp"
                       android:layout_marginTop="18dp"
-                      android:fontFamily="sans-serif-light"
                       android:paddingStart="10dp"/>
 
             <EditText android:id="@+id/invite_text"
@@ -55,45 +48,44 @@
                       android:layout_height="wrap_content"
                       android:minLines="2"
                       tools:text="Let's switch to Signal: https://sgnl.link/asdfdfsa"
-                      android:background="@drawable/message_bubble_background"
+                      android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
+                      android:background="?attr/invite_edit_text_background"
                       android:paddingTop="10dp"
                       android:paddingBottom="10dp"
+                      android:textColor="?title_text_color_primary"
                       android:paddingStart="10dp"
                       android:paddingEnd="20dp"
+                      android:minHeight="@dimen/invite_edit_text_min_height"
                       android:gravity="top"
-                      android:inputType="textShortMessage|textMultiLine"
-                      android:textColor="#ff333333"/>
+                      android:inputType="textShortMessage|textMultiLine"/>
 
-            <LinearLayout android:layout_width="match_parent"
-                          android:layout_height="wrap_content"
-                          android:layout_marginTop="10dp"
-                          android:gravity="center_horizontal"
-                          android:orientation="horizontal">
+            <Button android:id="@+id/sms_button"
+                android:layout_gravity="center_horizontal"
+                android:text="@string/InviteActivity_share_with_contacts"
+                android:layout_marginTop="16dp"
+                android:textColor="?conversation_title_color"
+                android:background="@drawable/cta_button_background"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
 
-                <Button android:id="@+id/share_button"
-                        android:drawablePadding="10dp"
-                        android:drawableStart="@drawable/ic_share_black_18dp"
-                        android:text="@string/InviteActivity_share"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        tools:ignore="ButtonStyle" />
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/share_button"
+                style="@style/Button.Borderless"
+                app:drawableStartCompat="?invite_share_icon"
+                android:drawablePadding="4dp"
+                android:layout_marginTop="16dp"
+                android:text="@string/InviteActivity_choose_how_to_share"
+                android:layout_width="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_height="wrap_content" />
 
-                <Button android:id="@+id/sms_button"
-                        android:drawableStart="@drawable/ic_message_solid_24"
-                        android:drawablePadding="10dp"
-                        android:text="@string/InviteActivity_choose_contacts"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        tools:ignore="ButtonStyle" />
-
-            </LinearLayout>
         </LinearLayout>
     </ScrollView>
 
     <LinearLayout android:id="@+id/sms_send_frame"
                   android:layout_width="match_parent"
                   android:layout_height="0dp"
-                  android:background="@color/white"
+                  android:background="?android:windowBackground"
                   android:orientation="vertical"
                   android:visibility="gone"
                   app:layout_constraintBottom_toBottomOf="parent"
@@ -104,10 +96,9 @@
             android:layout_height="?attr/actionBarSize"
             android:layout_width="match_parent"
             android:minHeight="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
+            android:background="@color/signal_primary"
             android:elevation="4dp"
-            app:searchTextStyle="@style/TextSecure.TitleTextStyle.Light"
-            android:theme="@style/TextSecure.HighlightActionBar" />
+            app:searchTextStyle="@style/TextSecure.TitleTextStyle.Light" />
 
         <fragment android:id="@+id/contact_selection_list_fragment"
                   android:layout_width="match_parent"
